--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -21,5 +21,6 @@ $color-text-primary: $silver-chalice;
 $stack-sans-serif: Helvetica, Arial, sans-serif;
 
 //Media Queries
+$brk-mobile: '(max-width: 454px)';
 $brk-narrow: '(max-width: 768px)';
 $brk-wide: '(max-width: 1400px)';
